# caliper

./: .gitignore  CMakeLists.txt  Makefile  README.md
bridge/: CMakeLists.txt  gavel_to_feed.cpp
docs/: feed.md  hunt.md
results/: cdf_book.csv  cdf_decide.csv  cdf_decode.csv  cdf_encode.csv  cdf_wire.csv  cdf_wire_co.csv  host.md  latency_vs_load.csv  tick_to_trade.csv  tick_to_trade_co.csv
results/hardware/: cdf_book.csv  cdf_decide.csv  cdf_decode.csv  cdf_encode.csv  cdf_wire.csv  cdf_wire_co.csv  host.md  tick_to_trade.csv  tick_to_trade_co.csv
scripts/: build_feed.sh  host_setup.sh  run_bench.sh  setup_veth.sh
src/book/: book.cpp  book.h  book_test.cpp
src/common/: feed_file.h  platform.h  wire.h
src/decode/: decode.h
src/encode/: encode.h
src/harness/: main.cpp
src/hist/: hist.cpp  hist.h  hist_test.cpp
src/pmu/: pmu.h  pmu_null.cpp  pmu_perf.cpp
src/rx/: af_xdp.cpp  feed.h  feed_source.h  sim_transport.cpp  so_timestamping.cpp  transport.h
src/strategy/: strategy.h
src/timing/: tsc.cpp  tsc.h
tools/: burst_check.cpp  hwstamp_check.cpp
